[gd_scene load_steps=11 format=3 uid="uid://csdluako5yquq"]

[ext_resource type="Script" uid="uid://dukb5t3wlyl3p" path="res://scripts/entity/player/player.gd" id="1_bnb2f"]
[ext_resource type="Texture2D" uid="uid://vyq5yjl7u0px" path="res://sprites/entity/player/player.png" id="2_fhcb0"]
[ext_resource type="Script" uid="uid://d372t85ub53c6" path="res://scripts/entity/player/attack_box.gd" id="3_n66fu"]
[ext_resource type="Script" uid="uid://crwi6bbtcnpux" path="res://scripts/entity/player/player_data.gd" id="4_4fs46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnwc1"]
size = Vector2(4, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b4hi"]
atlas = ExtResource("2_fhcb0")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lxa7"]
atlas = ExtResource("2_fhcb0")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_loqhs"]
atlas = ExtResource("2_fhcb0")
region = Rect2(16, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x2cqc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b4hi")
}],
"loop": true,
"name": &"player_idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lxa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loqhs")
}],
"loop": true,
"name": &"player_run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5jcu"]
size = Vector2(16, 14)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_data")]
collision_layer = 2
collision_mask = 15360
script = ExtResource("1_bnb2f")
player_data = NodePath("PlayerData")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_wnwc1")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_x2cqc")
animation = &"player_idle"
autoplay = "player_idle"

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
process_callback = 0
limit_bottom = 64
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="AttackBox" type="Area2D" parent="." node_paths=PackedStringArray("player")]
visible = false
collision_layer = 8
collision_mask = 11328
monitoring = false
monitorable = false
script = ExtResource("3_n66fu")
player = NodePath("..")

[node name="AttackCollisionShape" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_r5jcu")

[node name="PlayerData" type="Node2D" parent="."]
script = ExtResource("4_4fs46")

[connection signal="jumped" from="." to="PlayerData" method="_on_player_jumped"]
[connection signal="area_shape_entered" from="AttackBox" to="AttackBox" method="_on_area_shape_entered"]
[connection signal="body_entered" from="AttackBox" to="AttackBox" method="_on_body_entered"]
[connection signal="body_shape_entered" from="AttackBox" to="AttackBox" method="_on_body_shape_entered"]
